Restructure some code for neatness

--- a/toboggan/gui/index.html
+++ b/toboggan/gui/index.html
@@ -14,7 +14,11 @@
         </div>
         <label for="input" id="imprompt"></label>
         <div id="cont">
-          <textarea id="input" minLength="2" maxLength="30" required autofocus></textarea>
+          <textarea id="input"
+                    minLength="0"
+                    maxLength="0"
+                    required
+                    autofocus></textarea>
         </div>
       </div>
     </div>
